--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.17.3",
     "gulp": "^3.9.1",
+    "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2"
   }
 }
