--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "devDependencies": {
     "browser-sync": "^2.17.3",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1"
   }
 }
