--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.5.2",
     "browser-sync": "^2.17.3",
     "browserify": "^13.1.0",
+    "cssnano": "^3.8.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
     "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-sass": "^2.3.2",
-    "gulp-tap": "^0.1.3"
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-tap": "^0.1.3",
+    "gulp-uglify": "^2.0.0"
   },
   "dependencies": {
     "jquery": "^3.1.1"
