--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cssnano": "^3.8.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.2.0",
     "gulp-sass": "^2.3.2",
