--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-tap": "^0.1.3",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "gulp.spritesmith": "^6.2.1"
   },
   "dependencies": {
     "jquery": "^3.1.1"
